@@ -10,6 +10,8 @@
 	  (for NetworkManager integration.)
 	- Fix #554: use unsigned long to print 64bit statistics counters on
 	  64bit systems.
+	- Fix #558: failed prefetch lookup does not remove cached response
+	  but delays next prefetch (in lieu of caching a SERVFAIL).
 
 8 April 2014: Wouter
 	- Fix #574: make test fails on Ubuntu 14.04.  Disabled remote-control
